# SDE

./: .github  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  deploy.bat  deploy.sh  super_admin.bat
DOCUMENTACION_ACADEMICA/: 1_Justificacion_Tecnica_Rust.md  2_Cuadro_Comparativo_Arquitectura.md  3_Aporte_Innovacion_Tecnologica.md  4_Preguntas_Jurado_Defensa.md  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  state.rs  theme.rs
crates/app/src/ui/: dashboard.rs  departamentos_view.rs  documentos_view.rs  empleados_view.rs  estudiantes_view.rs  familiares_view.rs  mod.rs  reportes_view.rs
crates/app/src/ui/components/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  validation.rs
crates/core/src/models/: auditoria.rs  departamento.rs  documento.rs  empleado.rs  estudiante.rs  familiar.rs  mod.rs
crates/core/src/services/: departamento_service.rs  documento_service.rs  empleado_service.rs  estudiante_service.rs  familiar_service.rs  mod.rs
crates/pdf_engine/: Cargo.toml
crates/pdf_engine/src/: generator.rs  lib.rs  reader.rs  templates.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs
crates/storage/src/migrations/: 0001_esquema_inicial.sql
crates/storage/src/repositories/: almacen_archivos.rs  departamento_repo.rs  documento_repo.rs  empleado_repo.rs  estudiante_repo.rs  familiar_repo.rs  mod.rs
docs/: CNAME  index.html
escuela_api/: Cargo.toml  README.md
escuela_api/src/: auth.rs  error_response.rs  integrity.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
escuela_api/src/handlers/: audit_handler.rs  auth_handler.rs  documento_handler.rs  expediente_handler.rs  health_handler.rs  mod.rs  search_handler.rs  usuario_handler.rs
escuela_core/: Cargo.toml  README.md
escuela_core/src/: lib.rs
escuela_core/src/domain/: documento.rs  expediente.rs  mod.rs  usuario.rs
escuela_core/src/security/: crypto.rs  mod.rs  rbac.rs
escuela_core/src/services/: documento_service.rs  expediente_service.rs  mod.rs  usuario_service.rs
escuela_core/tests/: domain_tests.rs
escuela_shared/: Cargo.toml  README.md
escuela_shared/src/: error.rs  lib.rs  sanitization.rs  validation.rs
escuela_storage/: Cargo.toml  README.md
escuela_storage/src/: audit.rs  backup.rs  database.rs  documento_service_impl.rs  expediente_service_impl.rs  file_storage.rs  lib.rs  mappers.rs  search.rs  transaction.rs  usuario_service_impl.rs
escuela_storage/src/repositories/: documento_repository.rs  expediente_repository.rs  mod.rs  usuario_repository.rs
escuela_storage/tests/: integration_tests.rs
static/: README.md  admin.html  app.js  index.html  manifest.json  style.css  sw.js
static/css/: admin.css  style.css
static/js/: main.js
static/js/core/: api.js  offline-storage.js  sync-manager.js
static/js/modules/: admin.js  documentos.js  expedientes.js
static/js/ui/: components.js
website/: about.html  faq.html  features.html  index.html  technology.html
