[package]
name = "escuela_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
infer = { workspace = true }
mime_guess = { workspace = true }
escuela_core = { path = "../escuela_core" }
escuela_storage = { path = "../escuela_storage" }
escuela_shared = { path = "../escuela_shared" }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
