[package]
name = "escuela_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
escuela_shared = { path = "../escuela_shared" }
