[package]
name = "escuela_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
escuela_core = { path = "../escuela_core" }
escuela_shared = { path = "../escuela_shared" }
